[J4] Removes fixed max-height on sidebar-nav on wide screen
In PR #31092 a fixed height was introduced to the sidebar-nav to fix things on mobile screens (smaller than md).
But this causes a useless scrollbar and height limit on the sidebar nav on wider screens.

So this PR removes it.

Check the styling of the sidebar in the global configuration before and after this PR.

--- a/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
@@ -1,10 +1,11 @@
 // Sidebar
 
 .sidebar-nav {
-
+  @include media-breakpoint-down(md) {
+    max-height: 75vh;
+    overflow-y: scroll;
+  }
   // override bootstrap important
-  max-height: 75vh;
-  overflow-y: scroll;
   background: var(--atum-sidebar-bg) !important;
   box-shadow: $atum-box-shadow;
 
